--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <!--!========== HEADER ==========!-->
-    <header class="header">
-        <div class="contenedor contenedor-header">
+    <header class="header inicio">
+        <div class="contenedor contenido-header">
             <div class="barra">
                 <a href="/">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
