creando seccion de carts

--- a/index.html
+++ b/index.html
@@ -28,7 +28,34 @@
 
     <!--!========== MAIN ==========!-->
     <main class="contenedor seccion">
-        <h1>Titulo Principal</h1>
+
+        <!--!========== CART ==========!-->
+        <section class="cart">
+            <div class="cart-contenedor">
+                <div class="cart-icono-contenedor">
+                    <img class="cart-icono" src="/build/img/house-search.svg" alt="">
+                </div>
+                <div class="cart-texto">
+                    <h3>¿Buscas tu nuevo hogar?</h3>
+                    <p>10 nuevas ofertas cada día. 350 ofertas in situ, con la confianza de una comunidad de miles de usuarios.</p>
+                </div>
+            </div>
+            <div class="cart-contenedor">
+                <div class="cart-icono-contenedor">
+                    <img class="cart-icono" src="/build/img/house-sale.svg" alt="">
+                </div>
+                <div class="cart-texto">
+                    <h3>¿Quiere vender su casa?</h3>
+                    <p>10 nuevas ofertas cada día. 350 ofertas in situ, con la confianza de una comunidad de miles de usuarios.</p>
+                </div>
+            </div>
+        </section>
+        <!--!========== FIN CART ==========!-->
+
+        <!--!========== ELIGENOS ==========!-->
+        <h1>Por qué elegirnos</h1>
+        <!--!========== FIN ELIGENOS ==========!-->
+        
     </main>
     <!--!========== FIN MAIN ==========!-->
 
