creando la seccion eligenos

--- a/index.html
+++ b/index.html
@@ -54,8 +54,26 @@
 
         <!--!========== ELIGENOS ==========!-->
         <h1>Por qué elegirnos</h1>
+
+        <section class="icono-eligenos">
+            <div class="icono">
+                <img src="build/img/person-combination.svg">
+                <h3>Miles de personas confian en nosotros</h3>
+                <p>10 nuevas ofertas cada día. 350 ofertas en el sitio, con la confianza de una comunidad de miles de usuarios.</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/apartments.svg">
+                <h3>Amplia gama de propiedades</h3>
+                <p>Con una sólida selección de propiedades populares a su disposición, así como propiedades destacadas de expertos inmobiliarios</p>
+            </div>
+            <div class="icono">
+                <img src="build/img/house-money.svg">
+                <h3>Financiación sencilla para todos</h3>
+                <p>Nuestro departamento de financiación sin estrés que puede encontrar soluciones financieras para ahorrarle dinero.</p>
+            </div>
+        </section>
         <!--!========== FIN ELIGENOS ==========!-->
-        
+
     </main>
     <!--!========== FIN MAIN ==========!-->
 
