--- a/index.html
+++ b/index.html
@@ -74,6 +74,114 @@
         </section>
         <!--!========== FIN ELIGENOS ==========!-->
 
+        <!--!========== CASAS VENTAS ==========!-->
+        <section class="seccion contenedor">
+            <h2>Casas y Apartamentos en Ventas</h2>
+
+            <div class="contenedor-anuncios">
+                <div class="anuncio">
+                    <p class="etiqueta etiqueta-verde">Nueva</p>
+                    <picture>
+                        <source srcset="build/img/anuncio1.webp" type="imagen/webp">
+                        <source srcset="build/img/anuncio1.jpg" type="imagen/webp">
+                        <img loading="lazy" src="build/img/anuncio1.jpg" alt="anuncio1">
+                    </picture>
+                    <div class="contenido-anuncio">
+                        <h3>Casa de Lujo en el Lago</h3>
+                        <p>Casa en el lago con excelente vista, acabado de lujo a uun exelente precio</p>
+                        <p class="precio">$3,000,000</p>
+
+                        <ul class="iconos_caracteristicas">
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <p>4</p>
+                            </li>
+                        </ul>
+
+                        <a href="anuncios.html" class="boton boton-azul">
+                            Ver Propiedad
+                        </a>
+                    </div>
+                </div>
+                <div class="anuncio">
+                    <p class="etiqueta etiqueta-verde">Usada</p>
+                    <picture>
+                        <source srcset="build/img/anuncio2.webp" type="imagen/webp">
+                        <source srcset="build/img/anuncio2.jpg" type="imagen/webp">
+                        <img loading="lazy" src="build/img/anuncio2.jpg" alt="anuncio2">
+                    </picture>
+                    <div class="contenido-anuncio">
+                        <h3>Casa Moderna de Lujos</h3>
+                        <p>Casa con diseño moderno, asi como tecnologia inteligente y amueblada</p>
+                        <p class="precio">$2,000,000</p>
+
+                        <ul class="iconos_caracteristicas">
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <p>4</p>
+                            </li>
+                        </ul>
+
+                        <a href="anuncios.html" class="boton boton-azul">
+                            Ver Propiedad
+                        </a>
+                    </div>
+                </div>
+                <div class="anuncio">
+                    <p class="etiqueta etiqueta-verde">Alquiler</p>
+                    <picture>
+                        <source srcset="build/img/anuncio3.webp" type="imagen/webp">
+                        <source srcset="build/img/anuncio3.jpg" type="imagen/webp">
+                        <img loading="lazy" src="build/img/anuncio3.jpg" alt="anuncio3">
+                    </picture>
+                    <div class="contenido-anuncio">
+                        <h3>Casa con Pisina de Lujo</h3>
+                        <p>Casa con pisina y acabados de lujo en la ciudad, excelente oportunidad </p>
+                        <p class="precio">$3,000,000</p>
+
+                        <ul class="iconos_caracteristicas">
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <p>3</p>
+                            </li>
+                            <li>
+                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <p>4</p>
+                            </li>
+                        </ul>
+
+                        <a href="anuncios.html" class="boton boton-azul">
+                            Ver Propiedad
+                        </a>
+                    </div>
+                </div>
+            </div>
+            <div class="alinear-derecha">
+                <a href="anuncios.html" class="boton-amarillo">Ver Todas</a>
+            </div>
+        </section>
+        <!--!========== FIN CASAS VENTAS ==========!-->
+
     </main>
     <!--!========== FIN MAIN ==========!-->
 
