creando seccion de contactar

--- a/index.html
+++ b/index.html
@@ -182,6 +182,14 @@
         </section>
         <!--!========== FIN CASAS VENTAS ==========!-->
 
+        <!--!========== IMAGEN CONTACTO ==========!-->
+        <section class="imagen-contacto">
+            <h2>Encuentra la casa de tus sueños</h2>
+            <p>Llena el formulario de contacto y un asesor se pondra en contacto contigo a la brevedad</p>
+            <a href="contacto.html" class="boton-azul-inline">contacto</a>
+        </section>
+        <!--!========== FIN IMAGEN CONTACTO ==========!-->
+
     </main>
     <!--!========== FIN MAIN ==========!-->
 
