--- a/index.html
+++ b/index.html
@@ -190,6 +190,72 @@
         </section>
         <!--!========== FIN IMAGEN CONTACTO ==========!-->
 
+        <!--!========== BLOG TESTIMONIAL ==========!-->
+        <div class="contenedor seccion seccion-inferior">
+            <section class="blog">
+                <h3>Nuestro Blog</h3>
+
+                <article class="entrada-blog">
+                    <div class="imagen">
+                        <picture>
+                            <source
+                            srcset="build/img/blog1.webp" 
+                            type="imagen/webp">
+                            <source
+                            srcset="build/img/blog1.JPG" 
+                            type="imagen/JPG">
+                            <img loading="lazy"
+                            src="build/img/blog1.jpg"
+                            alt="imagen blog">
+                        </picture>
+                    </div>
+                    <div class="texto-entrada">
+                        <a href="entrada.html">
+                            <h4>Terraza en el techo de tu casa</h4>
+                            <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
+                            <p>
+                                Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
+                            </p>
+                        </a>
+                    </div>
+                </article>
+                <article class="entrada-blog">
+                    <div class="imagen">
+                        <picture>
+                            <source
+                            srcset="build/img/blog2.webp" 
+                            type="imagen/webp">
+                            <source
+                            srcset="build/img/blog2.JPG" 
+                            type="imagen/JPG">
+                            <img loading="lazy" src="build/img/blog2.jpg" alt="imagen blog">
+                        </picture>
+                    </div>
+                    <div class="texto-entrada">
+                        <a href="entrada.html">
+                            <h4>Guia para la decoracion de tu hogar</h4>
+                            <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
+                            <p>
+                                Maximiza el espacio de tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
+                            </p>
+                        </a>
+                    </div>
+                </article>
+
+            </section>
+            <section class="testimoniales">
+                <h3>Testimoniales</h3>
+                
+                <div class="testimonial">
+                    <blockquote>
+                        El personal se comporto de una excelente forma, muy buena atencion y la casa que me ofrecieron cumple con todas mis expectativas.
+                    </blockquote>
+                    <p>- Michael Torres</p>
+                </div>
+            </section>
+        </div>
+        <!--!========== FIN BLOG TESTIMONIAL ==========!-->
+
     </main>
     <!--!========== FIN MAIN ==========!-->
 
