--- a/anuncios.html
+++ b/anuncios.html
@@ -58,7 +58,7 @@
                             </li>
                         </ul>
 
-                        <a href="anuncios.html" class="boton boton-azul">
+                        <a href="anuncio.html" class="boton boton-azul">
                             Ver Propiedad
                         </a>
                     </div>
@@ -90,7 +90,7 @@
                             </li>
                         </ul>
 
-                        <a href="anuncios.html" class="boton boton-azul">
+                        <a href="anuncio.html" class="boton boton-azul">
                             Ver Propiedad
                         </a>
                     </div>
@@ -122,7 +122,7 @@
                             </li>
                         </ul>
 
-                        <a href="anuncios.html" class="boton boton-azul">
+                        <a href="anuncio.html" class="boton boton-azul">
                             Ver Propiedad
                         </a>
                     </div>
@@ -154,7 +154,7 @@
                             </li>
                         </ul>
 
-                        <a href="anuncios.html" class="boton boton-azul">
+                        <a href="anuncio.html" class="boton boton-azul">
                             Ver Propiedad
                         </a>
                     </div>
@@ -186,7 +186,7 @@
                             </li>
                         </ul>
 
-                        <a href="anuncios.html" class="boton boton-azul">
+                        <a href="anuncio.html" class="boton boton-azul">
                             Ver Propiedad
                         </a>
                     </div>
@@ -218,7 +218,7 @@
                             </li>
                         </ul>
 
-                        <a href="anuncios.html" class="boton boton-azul">
+                        <a href="anuncio.html" class="boton boton-azul">
                             Ver Propiedad
                         </a>
                     </div>
