--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                     <div class="texto-entrada">
                         <a href="entrada.html">
                             <h4>Terraza en el techo de tu casa</h4>
-                            <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
+                            <p class="info-meta">Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
                             <p>
                                 Consejos para construir una terraza en el techo de tu casa con los mejores materiales y ahorrando dinero
                             </p>
@@ -234,7 +234,7 @@
                     <div class="texto-entrada">
                         <a href="entrada.html">
                             <h4>Guia para la decoracion de tu hogar</h4>
-                            <p>Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
+                            <p class="info-meta">Escrito el: <span>20/10/2021</span> por: <span>Admin</span></p>
                             <p>
                                 Maximiza el espacio de tu hogar con esta guia, aprende a combinar muebles y colores para darle vida a tu espacio
                             </p>
