--- a/anuncios.html
+++ b/anuncios.html
@@ -14,12 +14,19 @@
                 <a href="/">
                     <img src="build/img/logo.svg" alt="Logotipo de Bienes Raices">
                 </a>
-                <nav class="navegacion">
-                    <a href="nosotros.html">Sobre Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contactanos</a>
-                </nav>
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu">
+                </div>
+
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="modo oscuro">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Sobre Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contactanos</a>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
@@ -45,15 +52,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -77,15 +84,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -109,15 +116,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -141,15 +148,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -173,15 +180,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -205,15 +212,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
