--- a/contacto.html
+++ b/contacto.html
@@ -19,12 +19,19 @@
                     <img src="build/img/barras.svg" alt="icono menu">
                 </div>
 
-                <nav class="navegacion">
-                    <a href="nosotros.html">Sobre Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contactanos</a>
-                </nav>
+                <div class="mobile-menu">
+                    <img src="build/img/barras.svg" alt="icono menu">
+                </div>
+
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="modo oscuro">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Sobre Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contactanos</a>
+                    </nav>
+                </div>
             </div>
         </div>
     </header>
