--- a/index.html
+++ b/index.html
@@ -19,13 +19,15 @@
                     <img src="build/img/barras.svg" alt="icono menu">
                 </div>
 
-
-                <nav class="navegacion">
-                    <a href="nosotros.html">Sobre Nosotros</a>
-                    <a href="anuncios.html">Anuncios</a>
-                    <a href="blog.html">Blog</a>
-                    <a href="contacto.html">Contactanos</a>
-                </nav>
+                <div class="derecha">
+                    <img class="dark-mode-boton" src="build/img/dark-mode.svg" alt="modo oscuro">
+                    <nav class="navegacion">
+                        <a href="nosotros.html">Sobre Nosotros</a>
+                        <a href="anuncios.html">Anuncios</a>
+                        <a href="blog.html">Blog</a>
+                        <a href="contacto.html">Contactanos</a>
+                    </nav>
+                </div>
             </div>
             <h1>Venta de Casas y Departamentos Exclusivos de Lujos</h1>
         </div>
@@ -99,15 +101,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -131,15 +133,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
@@ -163,15 +165,15 @@
 
                         <ul class="iconos_caracteristicas">
                             <li>
-                                <img loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_wc.svg" alt="icono wc">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_estacionamiento.svg" alt="icono estacionamiento">
                                 <p>3</p>
                             </li>
                             <li>
-                                <img loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
+                                <img class="icono-anuncio" loading="lazy" src="/build/img/icono_dormitorio.svg" alt="icono dormitorio">
                                 <p>4</p>
                             </li>
                         </ul>
